tests/wpt/tests/infrastructure/test262/strict.js
/*---
description: A strict-mode smoketest from https://github.com/tc39/test262/blob/main/INTERPRETING.md
negative:
  phase: parse
  type: SyntaxError
---*/
$DONOTEVALUATE();
var a\u2E2F;
